quick fix for the bug that wasnt allowing modals to be closed on small screen. Made a revamp on the icons position, went with a new look by having them scattered accross the page

--- a/src/styles/screen.css
+++ b/src/styles/screen.css
@@ -165,7 +165,6 @@ max-width: 120px;
 
 #aboutIcon{
     padding-top: 20px !important;
-    padding-left: 30px;
 }
 
 #fmIcon{
@@ -181,6 +180,7 @@ max-width: 120px;
 
 .flex-container{
     display: flex !important;
+    justify-content: space-around;
 }
 
 .MuiDialog-root, .MuiBackdrop-root {
